# CG-journey

./: CMakeLists.txt  README.md
cmake/modules/: Find_glad.cmake  Find_glfw.cmake  Find_glm.cmake  Find_stb.cmake
learn_opengl/: CMakeLists.txt  README.md  camera.h  data0.h  hello_camera.cpp  hello_coordinate_systems.cpp  hello_shader.cpp  hello_texture.cpp  hello_transformations.cpp  hello_triangle.cpp  hello_window.cpp  shader.h
learn_opengl/shaders/: 3.3.shader.fs  3.4.shader.fs  3.5.shader.vs  3.6.shader.fs  3.6.shader.vs
